# Client-Server-model-in-Linux-Kernel

./: CMakeLists.txt  README.md
src/: admin.cpp  admin.h  client.cpp  client.h  main.cpp  message.h
src/util/: logger.cpp  logger.h
